plugins {
    id 'java'
}

repositories {
    mavenCentral()
    maven {
        url = uri("https://maven.pkg.github.com/plug-obp/obp3-core")
        credentials {
            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
        }
    }
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(23))
    }
}

dependencies {
    implementation ('org.obpcdl:obp3-runtime:1.0.+')
    implementation project(':soup-core')
    implementation ('org.obpcdl:obp3-algos:1.0.+')
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

compileJava {
    options.compilerArgs.add('--enable-preview')
}

compileTestJava {
    options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs += '--enable-preview'
    useJUnitPlatform()
}

// Publishing metadata (configuration inherited from root project)
publishing {
    publications {
        maven(MavenPublication) {
            pom {
                name = 'Soup Model-Checker'
                description = 'Soup language OBP3 modelchecker '
            }
        }
    }
}

